# fpm-core

./: Cargo.toml  LICENSE  README.md
src/: db.rs  lib.rs  logger.rs  module.rs  project.rs  utils.rs
