[package]
name = "fpm-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

flatpak-rs = "0.6"

log = "0.4"
simple-logging = "2.0.2"
